# src/routes/users.ts
@@ -1,12 +1,16 @@
 import express from 'express';
-import controller from '../controllers/users';
+import usersController from '../controllers/users';
 import { Schemas, validateSchema } from '../middleware/validate-schema';
 
 const usersRouter = express.Router();
 
-usersRouter.post('/', validateSchema(Schemas.user.create), controller.create);
+usersRouter.post(
+  '/',
+  validateSchema(Schemas.user.create),
+  usersController.create,
+);
 // usersRouter.get('/:id', controller.readById);
-usersRouter.get('/', controller.readAll);
+usersRouter.get('/', usersController.readAll);
 // usersRouter.patch(
 //   '/:id',
 //   validateSchema(Schemas.user.update),
